# B42

./: .gitignore  Readme.md
libft/: Makefile
philosophers/: Makefile  philo.h  philo_1.h  philo_old.h
philosophers/philo/: CMakeLists.txt  Makefile
philosophers/philo/backup/: lifecycle.c  main.c  monitor.c  philo.h
philosophers/philo/backup/utils/: libft_extend.c  utils.c
philosophers/philo/include/: philo.h
philosophers/philo/save_src/: main.c
philosophers/philo/save_src/functional/: 1_config_args.c  2_init_philos.c  3_routine.c  4_manage_dining.c
philosophers/philo/save_src/utils/: 1_libft.c  2_philo_util.c  4_check_error.c
philosophers/philo/src/: args.c  eat.c  init.c  lifecycle.c  main.c  monitor.c  philo.c  philo_util.c  philosophers.c  utils.c  utils_libft.c  utils_time.c
philosophers/philo/src/functional/: 1_config_args.c  1_valid_args.c  1_valid_input.c  2_init_philos.c  2_init_rsc.c  3_init_philos.c  3_manage_dining.c  4_monitor.c  4_r.c  5_philosopers.c  args.c  init.c  init_resource.c  lifecycle.c  manage_dining.c  monitor.c  routine.c  valid_args.c
philosophers/philo/src/utils/: 1_libft.c  2_philo_util.c  2_philo_utils.c  3_error.c  4_check_error.c  4_free.c  error.c  free_error.c  instance.c  libft.c  libft_extend.c  util.c  utils.c  utils_libft.c  utils_lifecycle.c  utils_philo.c
philosophers/src/: main.c  (+4 more)
so_long/: CMakeLists.txt  Makefile
so_long/include/: so_long.h
so_long/lib/MLX42/: CMakeLists.txt
so_long/lib/MLX42/docs/: 42.md  index.md
so_long/lib/MLX42/tests/: CMakeLists.txt
so_long/src/: delete_image.c  utility.c
(+61 files in other folders)
